--- a/ProductCatalog-Services/ProductCatalog-Services.csproj
+++ b/ProductCatalog-Services/ProductCatalog-Services.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProductCatalog-Repositories\ProductCatalog-Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
