--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\ProductCatalog-Services\ProductCatalog-Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
