--- a/ProductCatalog-Web/appsettings.json
+++ b/ProductCatalog-Web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlConn": "Data Source=VICTUS;Initial Catalog=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "SqlConn": "Data Source=ADMIN\\SQLEXPRESS;Initial Catalog=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
