--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -17,6 +17,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.18" />
+    <PackageReference Include="Sentry.AspNetCore" Version="4.2.0" />
   </ItemGroup>
 
   <ItemGroup>
