Second sprint update

--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -27,6 +27,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\ContentManager\Data\" />
+    <Folder Include="Areas\ContentManager\Models\" />
   </ItemGroup>
 
 </Project>
