--- a/ProductCatalog-Services/ProductCatalog-Services.csproj
+++ b/ProductCatalog-Services/ProductCatalog-Services.csproj
@@ -8,6 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.10.0" />
+    <PackageReference Include="MimeKit" Version="4.10.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ProductCatalog-Repositories\ProductCatalog-Repositories.csproj" />
   </ItemGroup>
 
