--- a/ProductCatalog-Web/appsettings.json
+++ b/ProductCatalog-Web/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"SqlConn": "Data Source=ADMIN\\SQLEXPRESS;Initial Catalog=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "SqlConn": "Data Source=VICTUS;Initial Catalog=ProductCatalog;Database=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SqlConn": "Data Source=ADMIN\\SQLEXPRESS;Initial Catalog=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    //"SqlConn": "Data Source=VICTUS;Initial Catalog=ProductCatalog;Database=ProductCatalog;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Sentry": {
     "Dsn": "https://33aa5931e2ae8a5818fe5023e44d9067@o4508792041046016.ingest.us.sentry.io/4508792127029248",
