--- a/ProductCatalog-Services/ProductCatalog-Services.csproj
+++ b/ProductCatalog-Services/ProductCatalog-Services.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.10.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
     <PackageReference Include="MimeKit" Version="4.10.0" />
   </ItemGroup>
 
