--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -8,16 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Glimpse.AspNet" Version="1.9.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.35" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.18" />
     <PackageReference Include="Sentry.AspNetCore" Version="4.2.0" />
+    <PackageReference Include="TinyMCE.MVC.JQuery" Version="3.4.7" />
   </ItemGroup>
 
   <ItemGroup>
