--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -8,6 +8,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\ContentManager\Data\**" />
+    <Compile Remove="Areas\ContentManager\Models\**" />
+    <Content Remove="Areas\ContentManager\Data\**" />
+    <Content Remove="Areas\ContentManager\Models\**" />
+    <EmbeddedResource Remove="Areas\ContentManager\Data\**" />
+    <EmbeddedResource Remove="Areas\ContentManager\Models\**" />
+    <None Remove="Areas\ContentManager\Data\**" />
+    <None Remove="Areas\ContentManager\Models\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Glimpse.AspNet" Version="1.9.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
@@ -30,8 +41,6 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
-    <Folder Include="Areas\ContentManager\Data\" />
-    <Folder Include="Areas\ContentManager\Models\" />
   </ItemGroup>
 
 </Project>
