--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\CustomerRelations\Data\" />
+    <Folder Include="Areas\CustomerRelations\Models\" />
   </ItemGroup>
 
 </Project>
