--- a/ProductCatalog-Web/appsettings.json
+++ b/ProductCatalog-Web/appsettings.json
@@ -14,6 +14,11 @@
     "Dsn": "https://33aa5931e2ae8a5818fe5023e44d9067@o4508792041046016.ingest.us.sentry.io/4508792127029248",
     "Debug": true,
     "TracesSampleRate": 1.0
+  },
+  "EmailSettings": {
+    "SenderEmail": "mvc.productcatalog@gmail.com",
+    "Password": "anmk iryu joad lccd",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": "587"
   }
-
 }
