--- a/ProductCatalog-Web/ProductCatalog-Web.csproj
+++ b/ProductCatalog-Web/ProductCatalog-Web.csproj
@@ -19,6 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Areas\Admin\Views\Shared\Settings.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Glimpse.AspNet" Version="1.9.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.36">
       <PrivateAssets>all</PrivateAssets>
